# ZLangTranspiler

./: .gitignore  CMakeLists.txt  Makefile  astir.parser  bootstrap.z  c99.driver.c  c99.l  c99.y  install_win=sdk-x86=64--host-aarch64.sh  make.sh  make_asan.sh  make_release.sh  make_valgrind.sh  parser_v1.cpp  parser_v1.z  t.c  zlang_parser  zlang_parser.c  zlang_parser.h  zlang_v1.par  zlang_v1.par.h
Composable-List/include/: composable_list.h
QParse/: CMakeLists.txt  Error.cpp  Error.h  Input.cpp  Input.h  Iterator.cpp  Iterator.h  IteratorMatcher.h  Rules.cpp  Rules.h
QParse/testBuilder/: CMakeLists.txt
c-to-json/: flex_tokens.l  yacc_syntax.y
cs/zlang/: Program.cs
git/CppCompiler/: a.out  lex.yy.c  run.sh  y.tab.c  y.tab.h
git/CppCompiler/output/: ast_output.txt  junk.txt  optimized_output.txt
git/c99-compiler/include/parser/: astnode.h
git/cdecl/src/: cdecl.c.e
include/: MicroCpu.h  MicroCpu2.h  commit.h  ifstream_iterator.h  mmap.h  mmap_iterator.h  stream.h  token.h  token_combinator.h  token_pass_manager.h  token_stream.h
libriscv/.github/workflows/: unittests.yml
libriscv/lib/libriscv/posix/: socket_calls.cpp
libtcc-cmake/: CMakeLists.txt
libtcc-cmake/src/: tcc.h  tccgen.c
libtcc_zlang/include/tcc/: libtcc.h
libtcc_zlang/src/: libtcc.c  tcc.h  tccelf.c  tccgen.c  tccpp.c  tcctok.h
mmaptwo-plus/: CMakeLists.txt
parsertl-playground/playground/: c  c.c  c.cpp  css-webkit.g  playground
src/: ast_zlang.h  lexer.cpp  main.cpp  mmap.cpp  token.cpp  token_stream.cpp  vcpu2_tests.cpp  zlang_parser_v1.c  zlang_parser_v1_core.cpp
testBuilder/: CMakeLists.txt
unicc/: config.status  configure.ac
unicc/autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
unicc/lib/.deps/: phorward.Po
unicc/src/.deps/: build.Po  debug.Po  error.Po  first.Po  integrity.Po  lalr.Po  lex.Po  list.Po  main.Po  mem.Po  parse.Po  rewrite.Po  string.Po  utils.Po  virtual.Po  xml.Po
